Better vertical alignment for links in post footer + small fixes

--- a/deckard/static/deckard/css/base.css
+++ b/deckard/static/deckard/css/base.css
@@ -10,6 +10,7 @@
 
 .dkr-post-footer-link {
     margin: 0px 15px;
+    vertical-align: middle;
     display: inline-block;
 }
 
